--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -22,6 +22,11 @@
         <migbase64-version>2.2</migbase64-version>
         <jackson-databind-nullable>0.2.6</jackson-databind-nullable>
         <javax-annotation-api-version>1.3.2</javax-annotation-api-version>
+        <snakeyaml.version>2.2</snakeyaml.version>
+        <jakarta-validation-version>3.1.0-M1</jakarta-validation-version>
+        <spring-version>6.0.14</spring-version>
+        <tomcat-version>10.1.16</tomcat-version>
+        <logback-version>1.4.12</logback-version>
     </properties>
 
     <dependencies>
@@ -30,6 +35,41 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc-openapi-version}</version>
+		</dependency>
+		
+		<!-- spring -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>${spring-version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		    <version>${spring-version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>${spring-version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<!-- tomcat -->
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-core</artifactId>
+		    <version>${tomcat-version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-el</artifactId>
+		    <version>${tomcat-version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-websocket</artifactId>
+		    <version>${tomcat-version}</version>
 		</dependency>
 		       
 		<dependency>
@@ -55,6 +95,18 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey-version}</version>
         </dependency>
+        
+        <!-- logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback-version}</version>
+		</dependency>
         
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -117,6 +169,12 @@
         </dependency>
         
         <dependency>
+		    <groupId>org.yaml</groupId>
+		    <artifactId>snakeyaml</artifactId>
+		    <version>${snakeyaml.version}</version>
+		</dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
@@ -161,7 +219,7 @@
 		<dependency>
 		    <groupId>jakarta.validation</groupId>
 		    <artifactId>jakarta.validation-api</artifactId>
-		    <version>3.1.0-M1</version>
+		    <version>${jakarta-validation-version}</version>
 		</dependency>
 
 	</dependencies>
